feat: changed wording from "File upload successfully" to "File upload successful"

--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -196,7 +196,7 @@
     </div>
     <div class="feedback success invisible">
         <i class="fa fa-circle-check"></i>
-        <div class="message">File upload successfully</div>
+        <div class="message">File upload successful</div>
     </div>
 
     <div class="save-cancel-container w-90 flex-this flex-start">
