Updated the disclaimer message

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -1092,7 +1092,7 @@
     <div class="modal-defaults deactivate-modal flex-this column w-100">
         <div class="w-100">
             <div>
-                <h5 class="primary-black-text no-top-margin">Your account status is still unconfirmed. Confirm your account so others can view your project.</h5>  
+                <h5 class="primary-black-text no-top-margin">This account needs to be confirmed before public view is available to others.</h5>  
             </div>
             <div class="flex-this w-100 text-align-center">   
                 <div class="margin-left-1 primary-btn action-btn" onclick="cancelDisclaimer()">OK</div>
