--- a/templates/accounts/subscription-inquiry.html
+++ b/templates/accounts/subscription-inquiry.html
@@ -111,9 +111,14 @@
     <div class="modal-defaults deactivate-modal flex-this column w-100">
       <div class="w-100">
         <div>
-          <h5 class="primary-black-text no-top-margin">The institution you selected is already registered on the HUB. You can join this institution.</h5>  
+          <h5 class="primary-black-text no-top-margin">The institution you have selected is already registered on the Hub. You can join this institution by registering first.
+          </h5>  
         </div>
-        <div class="flex-this w-100 text-align-center">
+        <div class="flex-this flex-end w-100 text-align-center">
+          <a 
+          class="primary-btn action-btn margin-right-8"
+          onclick="cancelDisclaimer()"
+          >Close</a>  
           <a 
           class="primary-btn action-btn"
           href="{% url 'public-institution' institution.id %}"
