--- a/templates/accounts/subscription-inquiry.html
+++ b/templates/accounts/subscription-inquiry.html
@@ -115,7 +115,7 @@
     <div class="modal-defaults deactivate-modal flex-this column w-100">
       <div class="w-100">
         <div>
-          <h5 class="primary-black-text no-top-margin">The institution you have selected is already registered on the Hub. You can join this institution by registering first.
+          <h5 class="primary-black-text no-top-margin">The institution you have selected is already registered on the Hub. You can join this institution by {% if login_url %}signing in first.{% else %}registering first.{% endif %}
           </h5>  
         </div>
         <div class="flex-this flex-end w-100 text-align-center">
@@ -125,7 +125,7 @@
           >Close</a>  
           <a 
           class="primary-btn action-btn"
-          href="{% url 'public-institution' institution.id %}"
+          href="{% if login_url %}{{ login_url }}{% else %}{%  url 'public-institution' institution.id %}{% endif %}"
           >Join institution</a>    
         </div>
       </div>
