--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -173,7 +173,15 @@
                             {% endif %}
                             {% if project.additional_contributors %}
                                 {% for contributor in project.additional_contributors.all %}
-                                    <li>{{ contributor.name }} | Contributor </li>
+                                    <li>
+                                        {% if contributor.name and contributor.email %}
+                                            {{ contributor.name }}, {{ contributor.email }}
+                                        {% elif contributor.name %}
+                                            {{ contributor.name }}
+                                        {% elif contributor.email %}
+                                            {{ contributor.email }} 
+                                        {% endif %} | Contributor
+                                    </li>
                                 {% endfor %}
                             {% endif %}
                         </ul>
