--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -46,7 +46,7 @@
                                     </div>
                                 </div>
                                 <label class="margin-top-2">What topic(s) are you interested in? <br/> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label>
-                                <div class="flex-this w-100 margin-top-1">
+                                <div class="flex-this w-100 margin-top-1 margin-bottom-16">
                                     <div class="w-100 margin-right-1">
                                         <br>
                                         <input class="newsletter-toggle" type="checkbox" id="tech" name="topic" value="tech">
@@ -61,11 +61,9 @@
                                         <label for="labels">Labels in Use</label>
                                     </div>
                                 </div>
-                                <br>
                                 <input type="hidden" name="g-recaptcha-response" id="g-recaptcha-response">
-                                <br>
                                 <div class="flex-this w-100">
-                                    <div class="w-100 margin-right-1">
+                                    <div class="w-100 margin-right-1 margin-top-16">
                                         <button type="submit" class="primary-btn action-btn" name="subscribebtn">Subscribe</button>
                                     </div>
                                 </div> 
