--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -11,34 +11,27 @@
     <div class="flex-this space-between">
         <div><h2 class="no-top-margin">Engagement Notice</h2></div>
         <div class="flex-this flex-end">
-            <div class="margin-right-16"><a id="addURLBtn" class="primary-btn action-btn">Add Link <i class="fa-solid fa-circle-plus"></i></a></div>
-            <div>
-                {% if otc_download_perm == 1 %}
-                    <a 
-                        {% if researcher %}
-                            href="{% url 'download-open-to-collaborate-notice-researcher' perm=otc_download_perm researcher_id=researcher.id %}" 
-                        {% endif %}
-                        {% if institution %}
-                            href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}" 
-                        {% endif %}
-                        class="primary-btn blue-btn">
-                        Download Notice <i class="fa-solid fa-download"></i>
-                    </a>
-                {% else %}
-                    <div class="btn-with-helptext">
-                        <button class="primary-btn disabled-btn">Download Notice <i class="fa-solid fa-download"></i></button>
-                        <span class="btn-help-text">
+            <div class="margin-right-16 otc-dropdown" style="float:right;">
+                <button class="primary-btn action-btn">Options</button>
+                <div class="otc-dropdown-content">
+                    <a id="addURLBtn" class="primary-btn blue-btn">Add Link <i class="fa-solid fa-circle-plus"></i></a>
+                    {% if otc_download_perm == 1 %}
+                        <a 
+                            {% if researcher %}
+                                href="{% url 'download-open-to-collaborate-notice-researcher' perm=otc_download_perm researcher_id=researcher.id %}" 
+                            {% endif %}
                             {% if institution %}
-                                {% if not institution.is_approved %}
-                                    Your institution account needs to be confirmed in order to download this Notice.
-                                {% endif %}
+                                href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}" 
                             {% endif %}
-                            {% if is_sandbox %}
-                                Download of Notices is not available on the sandbox site.
-                            {% endif %}
-                        </span>
-                    </div>
-                {% endif %}
+                            class="primary-btn blue-btn">
+                            Download Notice <i class="fa-solid fa-download"></i>
+                        </a>
+                        <a id="shareBtn" class="primary-btn blue-btn">Share <i class="fa-solid fa-share-nodes"></i></a>
+                    {% else %}
+                        <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-solid fa-download"></i></a>
+                        <a id="addURLBtn" class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
