--- a/templates/partials/infocards/_community-dashcard.html
+++ b/templates/partials/infocards/_community-dashcard.html
@@ -18,7 +18,7 @@
                 {% include 'snippets/notifications.html' with scope=community %}
 
                 <!-- Settings -->
-                {% if request.user == community.community_creator or request.user in community.get_admins %}
+                {% if request.user == community.community_creator or member_role == 'admin' %}
                     <div class="margin-left-8">
                         <a href="{% url 'update-community' community.id %}" class="darkteal-text primary-btn white-btn"> Settings <i class="fa fa-cog" aria-hidden="true"></i></a>
                     </div>
