--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -1462,6 +1462,8 @@ i[data-tooltip]:hover:after {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right:0;
+    border-radius: 4px;
+    border: 1px #E6F1F3 solid;
 }
 
 .otc-dropdown-content a {
@@ -1473,6 +1475,7 @@ i[data-tooltip]:hover:after {
 .otc-dropdown .otc-dropdown-content a.blue-btn:hover {
     background-color: #338F9D;
     color: #fff;
+    border-radius: 4px;
 }
 
 .otc-dropdown:hover .otc-dropdown-content {display: block;}
