--- a/templates/institutions/projects.html
+++ b/templates/institutions/projects.html
@@ -1,4 +1,7 @@
 {% extends 'account-base.html' %} {% block title %} Projects {% endblock %}{% load static %} {% load custom_institution_tags %} {% block institution_content %}
+<div class="dasboard">
+{% include 'partials/_alerts.html' %}
+</div>
 {% institution_contributing_projects institution as institution_projects_contrib %}
     {% include 'projects/projects.html' %}
 {% endblock %}
