--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -26,7 +26,11 @@
                             class="primary-btn blue-btn">
                             Download Notice <i class="fa-solid fa-download"></i>
                         </a>
-                        <a id="shareBtn" class="primary-btn blue-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
+                        {% if urls %}
+                            <a id="shareBtn" class="primary-btn blue-btn">Share Notice <i class="fa-solid fa-share-nodes"></i></a>
+                        {% else %}
+                            <a id="addURLBtn" class="primary-btn disabled-btn" title="Add a link in order to share the Notice.">Share <i class="fa-solid fa-share-nodes"></i></a>
+                        {% endif %}
                     {% else %}
                         <a class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to download this Notice.{% endif %}{% endif %}{% if is_sandbox %}Download of Notices is not available on the sandbox site.{% endif %}">Download Notice <i class="fa-solid fa-download"></i></a>
                         <a id="addURLBtn" class="primary-btn disabled-btn" title="{% if institution %}{% if not institution.is_approved %}Your institution account needs to be confirmed in order to share this Notice.{% endif %}{% endif %}{% if is_sandbox %}Sharing of Notices is not available on the sandbox site.{% endif %}">Share <i class="fa-solid fa-share-nodes"></i></a>
@@ -524,7 +528,7 @@
 
         <div class="flex-this space-between">
             <div class="w-80">
-                <h2 class="primary-black-text no-top-margin">Share OTC Notice</h2>  
+                <h2 class="primary-black-text no-top-margin">Share Open to Collaborate Notice</h2>  
             </div>
             <div>
                 <div id="closeshareOTCNoticeModal" class="pointer"><i class="fa-regular fa-xmark fa-xl"></i></div>
