--- a/localcontexts/static/css/dashboard.css
+++ b/localcontexts/static/css/dashboard.css
@@ -3,11 +3,14 @@
     padding: 20px;
 }
 
+.dash-driver, .dashcard, .dashcard-alerts {
+    margin: 8px auto;
+    width: 1280px;
+}
+
 .dash-driver, .dashcard {
-    margin: 8px auto 8px auto;
     border-radius: 5px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    width: 1280px;
     background-color: #fff;
 }
 
