remove style float right for dropdown

--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -11,7 +11,7 @@
     <div class="flex-this space-between">
         <div><h2 class="no-top-margin">Engagement Notice</h2></div>
         <div class="flex-this flex-end">
-            <div class="margin-right-16 otc-dropdown" style="float:right;">
+            <div class="margin-right-16 otc-dropdown">
                 <button class="primary-btn action-btn">Options</button>
                 <div class="otc-dropdown-content">
                     <a id="addURLBtn" class="primary-btn blue-btn">Add Link <i class="fa-solid fa-circle-plus"></i></a>
