--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -20,7 +20,9 @@
         </div>
     {% endif %}
 {% endif %}
-
+<div class="project-actions-alert">
+    {% include 'partials/_alerts.html' %}
+</div>
 <div class="flex-this auto-margin" style="max-width: 1271px;">
 
     <!-- PROJECT -->
