--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -47,9 +47,9 @@
     }
 </script>
 <div class="flex-this space-between">
-    <div><h2 class="no-top-margin">Account Boundary</h2></div>
+    <div><h2 class="no-top-margin">Community Boundary</h2></div>
 </div>
-<div>Edit and manage your community boundary.</div>
+<div>Add your community boundary by either searching the Native Land Digital database or uploading a shapefile</div>
 <hr class="border-hr">
 
 {% if community.name_of_boundary %}
@@ -75,17 +75,9 @@
             </div>
 
         </div>
-    <hr class="border-hr">
     </div>
 {% endif %}
 
 <div id="community-boundary-update" class="w-80">
-    <div class="flex-this space-between">
-        <div><h2 class="no-top-margin">Community Boundary</h2></div>
-    </div>
-    <div>
-        Add your community boundary by either searching the Native Land Digital database or uploading a shapefile
-    </div>
-
     {% include 'communities/update-boundary-via-native-land-and-shapefile.html' %}
 </div>
