feat: added link to header

--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -49,7 +49,14 @@
 <div class="flex-this space-between">
     <div><h2 class="no-top-margin">Community Boundary</h2></div>
 </div>
-<div>Add your community boundary by either searching the Native Land Digital database or uploading a shapefile</div>
+<div>
+    Add your community boundary by searching the Native Land Digital database or uploading a shapefile.
+    <a href="https://localcontexts.org/support/getting-started-on-the-hub/#community-boundary"
+       class="default-a" target="_blank" rel="noopener">
+        Learn more about this feature on our website.
+        <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
+    </a>
+</div>
 <hr class="border-hr">
 
 {% if community.name_of_boundary %}
