feat: added link to bottom

--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -55,7 +55,7 @@
        class="default-a" target="_blank" rel="noopener">
         Learn more about this feature on our website.
         <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
-    </a>
+    </a><br><br>
 </div>
 <hr class="border-hr">
 
@@ -88,3 +88,10 @@
 <div id="community-boundary-update" class="w-80">
     {% include 'communities/update-boundary-via-native-land-and-shapefile.html' %}
 </div>
+
+<br>
+<a href="https://forms.gle/vWFuUDumo7uXYMfj8"
+   class="default-a" target="_blank" rel="noopener">
+    We are interested in your feedback about this new feature.
+    <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i>
+</a>
