Added clean methods for bclabels and tklabels form

--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -127,7 +127,7 @@
         <div id="open-div-{{ bclabel.unique_id }}" style="height: 0px; overflow: hidden;" class="div-toggle">
             <div class="full-label-card flex-this">
                 <div class="margin-right-16"><img src="{{bclabel.img_url}}" class="label-large pointer-event-none" alt="{{ bclabel.alt_text }}"></div>
-                <div>
+                <div class="w-90">
                     <div class="flex-this space-between">
                         <div><h3 class="no-top-margin">{{ bclabel.name }}</h3></div>
 
@@ -187,7 +187,7 @@
                 <div class="margin-right-16">
                     <img src="{{ tklabel.img_url }}" class="label-large  pointer-event-none" alt="{{ tklabel.alt_text }}">
                 </div>
-                <div>
+                <div class="w-90">
                     <div class="flex-this space-between">
                         <div><h3 class="no-top-margin">{{ tklabel.name }}</h3></div>
 
