Resolved muliple errors bug

--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -44,6 +44,8 @@
 
 {% if add_translation_formset.errors %}
     {% for error in add_translation_formset.errors %}
-        <div class="msg-red w-50"><small>{{ error.as_text }}</small></div> 
+        {% if error %}
+            <div class="msg-red w-50"><small>{{ error.as_text }}</small></div>
+        {% endif%} 
     {% endfor %}
 {% endif %}  
