feat: modified tool tip in project actions

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -791,8 +791,11 @@
                             <span class="tooltiptext">
                                 {% if 'sandbox.localcontextshub' in request.get_host %}
                                     Project cannot be downloaded on the sandbox site.
-                                {% else %}
+                                {% elif download_restricted_message %}
                                     {{ download_restricted_message }}
+                                {% else %}
+                                    The account that created this Project needs
+                                    to be subscribed before download is available.
                                 {% endif %}
                             </span>
                         </div> 
