--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -16,14 +16,23 @@
                 <div class="otc-dropdown-content">
                     <a id="addURLBtn" class="primary-btn blue-btn">Add Link <i class="fa-solid fa-circle-plus"></i></a>
                     {% if otc_download_perm == 1 %}
-                        <a 
+                        <a
                             {% if researcher %}
-                                href="{% url 'download-open-to-collaborate-notice-researcher' perm=otc_download_perm researcher_id=researcher.id %}" 
+                                class="{% if notify_restricted_message %}block a-disabled{% endif %} primary-btn blue-btn"
+                                href="{% url 'download-open-to-collaborate-notice-researcher' perm=otc_download_perm researcher_id=researcher.id %}"
                             {% endif %}
                             {% if institution %}
-                                href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}" 
+                                class="primary-btn blue-btn"
+                                href="{% url 'download-open-to-collaborate-notice-institution' perm=otc_download_perm institution_id=institution.id %}"
                             {% endif %}
-                            class="primary-btn blue-btn">
+                            >
+                            {% if notify_restricted_message %}
+                                <div class="tooltip" style="margin-top: 6px"><strong>i</strong>
+                                    <span class="tooltiptext">
+                                        {{ notify_restricted_message }}
+                                    </span>
+                                </div>
+                            {% endif %}
                             Download Notice <i class="fa-solid fa-download"></i>
                         </a>
                         {% if urls %}
