--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -949,10 +949,23 @@
                             </span>
                         </div> 
                     </h3>
-                    <a 
-                        class="block" 
-                        href="{% url 'view-project' project.unique_id %}"
-                    ><i class="fa-solid fa-eye"></i> Public View</a>
+                    {% if public_view_restricted_message %}
+                        <a
+                            class="block a-disabled"
+                            href="{% url 'view-project' project.unique_id %}"
+                        ><i class="fa-solid fa-eye"></i> Public View
+                        <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
+                            <span class="tooltiptext">
+                                {{ public_view_restricted_message }}
+                            </span>
+                        </div>
+                        </a>
+                    {% else %}
+                        <a
+                            class="block"
+                            href="{% url 'view-project' project.unique_id %}"
+                        ><i class="fa-solid fa-eye"></i> Public View</a>
+                    {% endif %}
                 </div> 
             {% endif %}
         {% endif %}
